# agentic-intelligence-workflow

./: .gitignore  ReadMe.md  agents.md  pandasai_quickstart_guide.ipynb  pipeline_utils.py  project_context.md  pyproject.toml  requirements.txt  run_daily_pipeline.py  run_hourly_pipeline.py  run_realtime_pipeline.py  telegram_session.session-journal
agents/: config.py  fuse_findings.py  graph.py  graph_workflow.py  state.py
agents/nodes/: forecast.py  formatting.py  fusion.py  pandas_analysis.py  planning.py  retrieval.py
agents/prompts/: forecast_implications.txt  fusion_prompt.txt  planner_prompt.txt
api/: main.py
api/routes/: anomalies.py  intel.py
data/raw/: StockData.xlsx  USGS.xlsx
db/: StockData.xlsx  StockData_long.xlsx  market_data.db  market_osint.db  news_feeds.db  stockalerts.xlsx  twz_feed.db
ingestion/: firms_update.py  stocks_update.py  telethon_update.py  usgs_update.py  warzone_update.py  wsj_update.py
processing/: build_event_hourly_aggregates.py  build_hourly_anomalies.py  build_recent_clusters.py  test_clusters.py
semantic/: semantic_models.yml
slackbot/: bot.py
